# qc-computational-cognitive-modeling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CURRICULUM.md  LICENSE  README.md  pyproject.toml
.brev/: setup.sh
.github/workflows/: ci.yml
autoresearch/: experiment.py  knowledge.yaml  prepare.py  program.md
autoresearch/engine/: runner.py  validators.py
autoresearch/schemas/: hypothesis.py
docs/: quantum_neuro_landscape.md
manuscript/: config.yaml  outline.md  references.bib
notebooks/: 01_bits_to_qubits.ipynb  02_quantum_walks_decision.ipynb  03_quantum_vs_classical_efe.ipynb  04_quantum_minority_game.ipynb  05_spins_phases_collective.ipynb  06_quantum_neuroai_pipeline.ipynb
results/001603/: sub-HO2_sub-HO2_ses-20250912T144835_obj-77d92a_ecephys_quantum.json  sub-HO2_sub-HO2_ses-20250912T144835_obj-9jlzq1_ecephys_quantum.json  sub-HO2_sub-HO2_ses-20250912T144837_ecephys_quantum.json  sub-HO2_sub-HO2_ses-20250912T144839_ecephys_quantum.json  sub-HO2_sub-HO2_ses-20250924T011901_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250912T144841_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250912T144846_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250912T150817_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250924T011903_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250926T121244_ecephys_quantum.json  sub-HO3_sub-HO3_ses-20250926T121259_ecephys_quantum.json  sub-M1S1_sub-M1S1_ses-20250924T011941_ecephys_quantum.json  sub-M2S1_sub-M2S1_ses-20250924T012017_ecephys_quantum.json  sub-M2S2_sub-M2S2_ses-20250924T012057_ecephys_quantum.json  sub-M3S1_sub-M3S1_ses-20250924T012016_ecephys_quantum.json  sub-M3S2_sub-M3S2_ses-20250924T012228_ecephys_quantum.json  sub-MO10_sub-MO10_ses-20250924T011945_ecephys_quantum.json  sub-MO11_sub-MO11_ses-20250924T011954_ecephys_quantum.json  sub-MO11_sub-MO11_ses-20250924T012255_ecephys_quantum.json  sub-MO12_sub-MO12_ses-20250924T011952_ecephys_quantum.json  sub-MO13_sub-MO13_ses-20250924T012003_ecephys_quantum.json  sub-MO13_sub-MO13_ses-20250924T012020_ecephys_quantum.json  (+5 more)
scripts/: batch_fast.py  create_brev_instance.sh  run_dandi_batch.sh  run_dandi_pipeline.py  run_overnight.sh  setup_runpod.sh
tests/: test_agreement.py  test_alf_bridge.py  test_annealing.py  test_benchmarks.py  test_bridge.py  test_circuits.py  test_dandi_pipeline.py  test_data_interface.py  test_density_matrix.py  test_fitting.py  test_integration.py  test_minority.py  test_minority_quantum_validity.py  test_mitigation.py  test_multiscale.py  test_networks.py  test_neural_states.py  test_path_integral.py  test_physics_invariants.py  test_pipeline_batch.py  test_quantum_walk.py  test_resource_estimation.py  test_spin_glass.py  test_spin_glass_jax.py
(+96 files in other folders)
