[project]
name = "qcccm"
version = "0.1.0"
description = "Quantum Compute for Computational Cognitive Modeling — bridging quantum computing and computational cognitive neuroscience"
readme = "README.md"
authors = [
    { name = "Morgan Hough", email = "morgan.hough@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "numpy>=1.24",
    "pennylane>=0.35",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
alf = ["alf-aif @ file:///home/mhough/dev/alf"]
ibm = ["qiskit>=1.0", "qiskit-aer>=0.14"]
annealing = ["dwave-ocean-sdk>=6.0"]
mitiq = ["mitiq>=0.48"]
all = ["qcccm[ibm,annealing,mitiq]"]
dev = ["pytest", "mypy", "ruff", "nbval"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
