[project]
name = "qcccm"
version = "0.1.0"
description = "Quantum Compute for Computational Cognitive Modeling — bridging quantum computing and computational cognitive neuroscience"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Morgan Hough", email = "morgan.hough@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.20,<0.5",
    "jaxlib>=0.4.20,<0.5",
    "numpy>=1.24",
    "pennylane>=0.35",
    "matplotlib>=3.7",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/m9h/qc-computational-cognitive-modeling"
Repository = "https://github.com/m9h/qc-computational-cognitive-modeling"
Issues = "https://github.com/m9h/qc-computational-cognitive-modeling/issues"

[project.optional-dependencies]
ibm = ["qiskit>=1.0", "qiskit-aer>=0.14"]
annealing = ["dwave-ocean-sdk>=6.0"]
mitiq = ["mitiq>=0.48"]
all = ["qcccm[ibm,annealing,mitiq]"]
dev = ["pytest>=9.0", "mypy", "ruff", "nbval", "pytest-cov"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "nbval",
]
